--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,12 @@ description: 在這波科技的浪潮中，努力地留下自己的痕跡
 author: Eric Jhang
 language: zh-tw
 timezone: Asia/Taipei
+keywords: Python,Heroku,Linebot,python,heroku,科技的旅程,EricJhang,EricJK
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://ericjhang.github.io/
+root: https://ericjhang.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -35,7 +36,7 @@ external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
-relative_link: false
+relative_link: true
 future: true
 highlight:
   enable: true
@@ -70,7 +71,8 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-## Plugins: https://hexo.io/plugins/
+Plugins:
+- hexo-generator-sitemap
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-next
 
