--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,16 @@ description: 在這波科技的浪潮中，努力地留下自己的痕跡
 author: Eric Jhang
 language: zh-tw
 timezone: Asia/Taipei
-keywords: Python,Heroku,Linebot,python,heroku,科技的旅程,EricJhang,EricJK
+
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://ericjhang.github.io/
-root: https://ericjhang.github.io/
-permalink: :year/:month/:day/:title/
+root: /
+permalink: archives/:abbrlink.html
+abbrlink:
+  alg: crc32  # 算法：crc16(default) and crc32
+  rep: hex    # 进制：dec(default) and hex
 permalink_defaults:
 
 # Directory
@@ -55,8 +58,8 @@ index_generator:
   
 # Category & Tag
 default_category: uncategorized
-category_map:
-tag_map:
+#category_map:
+#tag_map:
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -82,3 +85,5 @@ deploy:
   type: git
   repo: git@github.com:EricJhang/ericjhang.github.io.git
   branch: master
+sitemap:
+ path: sitemap.xml
